[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Image.tscn" type="PackedScene" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonGallery" type="Button" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Get Gallery Image"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonGalleryMulti" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 400.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Get Gallery Images"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCamera" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 400.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Get Camera Image"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Images" type="GridContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 400.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Image" parent="VBoxContainer/Images" instance=ExtResource( 2 )]
margin_right = 400.0
margin_bottom = 280.0

[node name="ButtonSetOptions" type="Button" parent="VBoxContainer"]
margin_top = 356.0
margin_right = 400.0
margin_bottom = 376.0
text = "Set image size to 100*100 but keep aspect ratio"

[node name="ButtonResetOptions" type="Button" parent="VBoxContainer"]
margin_top = 380.0
margin_right = 400.0
margin_bottom = 400.0
text = "Set options to default"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 50.0
margin_top = 147.0
margin_right = 133.0
margin_bottom = 205.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ButtonGallery" to="." method="_on_ButtonGallery_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonGalleryMulti" to="." method="_on_ButtonGalleryMulti_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCamera" to="." method="_on_ButtonCamera_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSetOptions" to="." method="_on_ButtonSetOptions_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonResetOptions" to="." method="_on_ButtonResetOptions_pressed"]
